# easymq

./: .coveragerc  .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py
docs/: v0.9_goals.txt
pip-wheel-metadata/QuickMQ.dist-info/: METADATA  entry_points.txt
src/: easymq.py
src/easymq/: __init__.py  __main__.py  __version__.py  adapter.py  api.py  backend.py  config.py  connection.py  easymq.py  message.py  publish.py  session.py
src/easymq/cli/: __main__.py
src/easymq/editor/: __init__.py  editor_api.py
src/quickmq/: __init__.py  __main__.py  __version__.py  api.py  client.py  config.py  connection.py  editor.py  exceptions.py  message.py  publish.py  session.py  structures.py
src/quickmq/cli/: __main__.py  main.py
src/quickmq/editor/: __init__.py  editor_api.py
test/: amqp_server.py  conftest.py  memory.py  performance.py  send_test.py  test_api.py  test_cli.py  test_config.py  test_connection.py  test_pika_con.py  test_pool.py  test_session.py
test/cfg/: bad_json.json  test_defaults.json
