[metadata]
name = EasyMQ
description = A simple AMQP message publisher
author = Max Drexler
license = MIT
license_files = LICENSE


[options]
packages =
    easymq
install_requires = 
    pika
package_dir =
    =src
[options.extras_require]
testing =
    pytest
    pytest-cov
    mypy
    flake8
    tox

[options.package_date]
easymq = py.typed

[flake8]
max-line-length = 160