[metadata]
name = EasyMQ
version = 0.1.0
url = https://gitlab.ssec.wisc.edu/mdrexler/easymq
description = A simple AMQP message publisher
author = Max Drexler
keywords = rabbitmq, message publisher, amqp message
license = MIT
license_files = LICENSE


[options]
packages =
    easymq
install_requires = 
    pika
package_dir =
    =src

[options.extras_require]
testing =
    pytest
    pytest-cov
    mypy
    flake8
    tox

[options.package_data]
easymq = py.typed

[flake8]
max-line-length = 160
per-file-ignores = __init__.py:F401

[tox:tox]
env_list =
    py37
    py38
    py39
    py310
    py311
    flake8
    mypy

[testenv]
deps = 
    pytest
    pytest-cov
commands = pytest --basetemp={envtmpdir}

[testenv:flake8]
deps = flake8
commands = flake8 src

[testenv:mypy]
deps = mypy
commands = mypy src