[metadata]
name = EasyMQ
version = attr: easymq.__version__.__version__
url = https://gitlab.ssec.wisc.edu/mdrexler/easymq
description = A simple AMQP message publisher
author = Max Drexler
author_email = mndrexler@wisc.edu
keywords = rabbitmq, message publisher, amqp message
license = MIT
license_files = LICENSE


[options]
packages =
    easymq
install_requires = 
    pika
    platformdirs
package_dir =
    =src

[options.entry_points]
console_scripts =
    easymq = easymq.cli.__main__:main

[options.extras_require]
testing =
    pytest
    pytest-cov
    mypy
    flake8
    tox

[options.package_data]
easymq = py.typed

[flake8]
max-line-length = 120
per-file-ignores = __init__.py:F401

[tox:tox]
env_list =
    py37
    py38
    py39
    py310
    py311
    flake8
    mypy

[testenv]
deps = 
    pytest
    pytest-cov
commands = pytest --basetemp={envtmpdir}

[testenv:flake8]
deps = flake8
commands = flake8 src

[testenv:mypy]
deps = mypy
commands = mypy src